Fix tooltip being pushed too much down

--- a/recipe-front-end/src/App.scss
+++ b/recipe-front-end/src/App.scss
@@ -104,7 +104,7 @@ li {
 .user-account-button,
 .user-add-recipe {
   font-size: 1.5em;
-  padding: 1em;
+  padding: 0 0.75em 0 0.75em;
   border-radius: 1em;
 }
 
